修改 路徑位置

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>高中學測課程廣告介紹頁 (6月預購版)</title>
-        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="./css/index.css">
     </head>
     <body>
         <header>
@@ -20,11 +20,11 @@
             <a href="#contents">課程內容</a>
             <a href="#prices">驚爆價</a>
         </nav>
-        <section id="banner"><img src="img/banner.png"/></section>
+        <section id="banner"><img src="./img/banner.png"/></section>
         <section id="teachers"></section>
         <section id="contents"></section>
         <section id="prices"></section>
         <footer></footer>
-        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="./js/index.js"></script>
     </body>
-</html>
+</htmls
