修改 導覽頁及header內容

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,13 @@
     <body>
         <header>
             <a class="logo" href="https://www.ehanlin.com.tw/index.html"></a>
-            <span class="tel">課程咨詢：<a href="tel:0800008811">0800-0088-11</a></span>
-            <span class="icons">
-                <a class="facebook"><i></i></a>
-                <a class="line"><i></i></a>
-            </span>
+            <span class="info">
+                <span class="tel">課程咨詢：<a href="tel:0800008811">0800-0088-11</a></span>
+                <span class="icons">
+                    <a class="facebook" target="_blank" href="https://www.facebook.com/ehanlin.com.tw"></a>
+                    <a class="line" target="_blank" href="http://line.me/R/ti/p/MtsRQz_Hn5"></a>
+                </span>
+            <span>
         </header>
         <nav>
             <a href="#banner">雲端學院</a>
