修改 互動系列完成

--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,102 @@
             <span>
         </header>
         <nav>
-            <a href="#banner">雲端學院</a>
-            <a href="#teachers">師資團隊</a>
-            <a href="#contents">課程內容</a>
-            <a href="#prices">驚爆價</a>
+            <a href="#banner"></a>
+            <a href="#teachers"></a>
+            <a href="#contents"></a>
+            <a href="#prices"></a>
         </nav>
-        <section id="banner"><img src="./img/banner.png"/></section>
-        <section id="teachers"></section>
-        <section id="contents"></section>
-        <section id="prices"></section>
-        <footer></footer>
+        <section id="banner"><img src="./img/section_1.png"/></section>
+        <section><img src="./img/section_2.png"/></section>
+        <section>
+            <img src="./img/section_3.png"/>
+            <ul class="benefits">
+                <li class="card">
+                    <img class="front" src="./img/benefit/benefit_1_f.png"/>
+                    <img class="back"  src="./img/benefit/benefit_1_b.png"/>
+                </li>
+                <li class="card">
+                    <img class="front" src="./img/benefit/benefit_2_f.png"/>
+                    <img class="back"  src="./img/benefit/benefit_2_b.png"/>
+                </li>
+                <li class="card">
+                    <img class="front" src="./img/benefit/benefit_3_f.png"/>
+                    <img class="back"  src="./img/benefit/benefit_3_b.png"/>
+                </li>
+                <li class="card">
+                    <img class="front" src="./img/benefit/benefit_4_f.png"/>
+                    <img class="back"  src="./img/benefit/benefit_4_b.png"/>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <img src="./img/section_4.png"/>
+            <ul class="advantages">
+                <li class="card">
+                    <img class="front" src="./img/advantage/advantage_1_f.png"/>
+                    <img class="back"  src="./img/advantage/advantage_1_b.png"/>
+                </li>
+                <li class="card">
+                    <img class="front" src="./img/advantage/advantage_2_f.png"/>
+                    <img class="back"  src="./img/advantage/advantage_2_b.png"/>
+                </li>
+                <li class="card">
+                    <img class="front" src="./img/advantage/advantage_3_f.png"/>
+                    <img class="back"  src="./img/advantage/advantage_3_b.png"/>
+                </li>
+                <li class="card">
+                    <img class="front" src="./img/advantage/advantage_4_f.png"/>
+                    <img class="back"  src="./img/advantage/advantage_4_b.png"/>
+                </li>
+                <li class="card">
+                    <img class="front" src="./img/advantage/advantage_5_f.png"/>
+                    <img class="back"  src="./img/advantage/advantage_5_b.png"/>
+                </li>
+            </ul>
+        </section>
+        <section id="teachers">
+            <img src="./img/section_5.png"/>
+            
+            <input id="teacher_1" name="teacher" type="radio"></input>
+            <input id="teacher_2" name="teacher" type="radio"></input>
+            <input id="teacher_3" name="teacher" type="radio"></input>
+            <input id="teacher_4" name="teacher" type="radio"></input>
+            <input id="teacher_5" name="teacher" type="radio"></input>
+            <input id="teacher_6" name="teacher" type="radio"></input>
+            <input id="teacher_7" name="teacher" type="radio"></input>
+            <input id="teacher_8" name="teacher" type="radio"></input>
+            <input id="teacher_9" name="teacher" type="radio"></input>
+            <input id="teacher_10" name="teacher" type="radio"></input>
+
+            <ol class="teachers">
+                <li><label for="teacher_1"><img src="./img/teacher/teacher_1.png"/></label></li>
+                <li><label for="teacher_2"><img src="./img/teacher/teacher_2.png"/></label></li>
+                <li><label for="teacher_3"><img src="./img/teacher/teacher_3.png"/></label></li>
+                <li><label for="teacher_4"><img src="./img/teacher/teacher_4.png"/></label></li>
+                <li><label for="teacher_5"><img src="./img/teacher/teacher_5.png"/></label></li>
+                <li><label for="teacher_6"><img src="./img/teacher/teacher_6.png"/></label></li>
+                <li><label for="teacher_7"><img src="./img/teacher/teacher_7.png"/></label></li>
+                <li><label for="teacher_8"><img src="./img/teacher/teacher_8.png"/></label></li>
+                <li><label for="teacher_9"><img src="./img/teacher/teacher_9.png"/></label></li>
+                <li><label for="teacher_10"><img src="./img/teacher/teacher_10.png"/></label></li>
+            </ol>
+            <ol class="teacher-infos">
+                <li><img src="./img/teacher/teacher_info_1.png"/></li>
+                <li><img src="./img/teacher/teacher_info_2.png"/></li>
+                <li><img src="./img/teacher/teacher_info_3.png"/></li>
+                <li><img src="./img/teacher/teacher_info_4.png"/></li>
+                <li><img src="./img/teacher/teacher_info_5.png"/></li>
+                <li><img src="./img/teacher/teacher_info_6.png"/></li>
+                <li><img src="./img/teacher/teacher_info_7.png"/></li>
+                <li><img src="./img/teacher/teacher_info_8.png"/></li>
+                <li><img src="./img/teacher/teacher_info_9.png"/></li>
+                <li><img src="./img/teacher/teacher_info_10.png"/></li>
+            </ol>
+        </section>
+        <section id="contents"><img src="./img/section_6.png"/></section>
+        <section id="prices"><img src="./img/section_7.png"/></section>
+        <section><img src="./img/section_8.png"/></section>
+        <footer><img src="./img/footer.png"/></footer>
         <script type="text/javascript" src="./js/index.js"></script>
     </body>
 </html>
